# pyclutter

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.SVN  Makefile.am  Makefile.tmpl  NEWS  README  autogen.sh  configure.ac  pyclutter.doap
clutter/: Makefile.am  Makefile.in  __init__.py  clutter-actor.override  clutter-alpha.override  clutter-animation.override  clutter-base-types.defs  clutter-base.defs  clutter-behaviour.override  clutter-boxed.override  clutter-cairotexture.override  clutter-color.override  clutter-container.override  clutter-effect.override  clutter-event.override  clutter-interval.override  clutter-model.override  clutter-path.override  clutter-script.override  clutter-text.override  clutter.defs  clutter.override  clutterglx-base-types.defs  clutterglx-base.defs  clutterglx.override  clutterglxmodule.c  cluttermodule.c  clutterpython.c  clutterx11-base-types.defs  clutterx11-base.defs  clutterx11.override  clutterx11module.c  cogl-base-types.defs  cogl-base.defs  cogl-material.override  cogl-matrix.override  cogl-offscreen.override  cogl-shader.override  cogl-texture.override  cogl.override  (+5 more)
clutter-cairo/: Makefile.am  __init__.py  cluttercairo.defs  cluttercairo.override  cluttercairomodule.c
clutter-gst/: Makefile.am  __init__.py  clutter-gst-module.c  clutter-gst-types.defs  clutter-gst.defs  cluttergst.defs  cluttergst.override  cluttergstmodule.c
clutter-gtk/: Makefile.am  __init__.py  cluttergtk.defs  cluttergtk.override  cluttergtkmodule.c
codegen/: Makefile.am  codegen.py
docs/: Makefile.am  update-bindings.txt
docs/reference/: clutter-classes.xml  clutter-clutteractor.xml  clutter-clutteractorbox.xml  clutter-clutteralpha.xml  clutter-clutterbackend.xml  clutter-clutterbehaviour.xml  clutter-clutterbehaviourbspline.xml  clutter-clutterbehaviourdepth.xml  clutter-clutterbehaviourellipse.xml  clutter-clutterbehaviouropacity.xml  clutter-clutterbehaviourpath.xml  clutter-clutterbehaviourrotate.xml  clutter-clutterbehaviourscale.xml  clutter-clutterchildmeta.xml  clutter-clutterclonetexture.xml  clutter-cluttercolor.xml  clutter-cluttercontainer.xml  clutter-cluttereffecttemplate.xml  clutter-clutterentry.xml  clutter-clutterevent.xml  clutter-cluttergeometry.xml  clutter-cluttergroup.xml  clutter-clutterknot.xml  clutter-clutterlabel.xml  clutter-clutterlistmodel.xml  clutter-cluttermedia.xml  clutter-cluttermodel.xml  clutter-cluttermodeliter.xml  clutter-clutterrectangle.xml  clutter-clutterscore.xml  clutter-clutterscript.xml  clutter-clutterscriptable.xml  clutter-cluttershader.xml  clutter-clutterstage.xml  clutter-cluttertext.xml  clutter-cluttertexture.xml  clutter-cluttertimeline.xml  clutter-cluttervertex.xml  clutter-hierarchy.xml  clutter-overview.xml  (+1 more)
examples/: Makefile.am  Makefile.in  behave.py  bubbles.py  cairo-texture.py  clock.py  custom-actor.py  custom-container.py  entry.py  flowers.py  gtk-clutter.py  hello.py  rects.py  reflection.py  script.py  super-oh.py  test-animation.py  test-easing.py  test-multitexture.py  test-scale.py  videosink.py
tidy/: Makefile.am  tidy-types.defs  tidy.defs  tidy.override  tidymodule.c
